--- a/templates/Admin Panel Page/adminhome.html
+++ b/templates/Admin Panel Page/adminhome.html
@@ -7,14 +7,7 @@
     <title>داشبورد</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='src/bootstrap.rtl.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/adminhome.css') }}" />
     <style>
@@ -34,7 +27,7 @@
     <div class="sidebar">
         <h2>روان افرا</h2>
         <ul>
-          <li  class="current_page">
+          <li class="current_page">
             <a href="#dashboard"><i class="fa fa-home"></i><p class="d-inline m-2">خانه</p></a>
           </li>
           <li><a href="{{ url_for('logout') }}"> <i class="fa-solid fa-arrow-right-from-bracket"></i><p class="d-inline m-2">خروج از حساب</p> </a></li>
@@ -46,13 +39,22 @@
           <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
         </header>
         <br />
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          <div class="container mt-3">
+            {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+          </div>
+        {% endif %}
+        {% endwith %}
         <div class="container">
           <div class="row">
               <div class="col-12 col-md-6 col-lg-4 gy-5">
-                  <div class="row justify-content-center ">
+                  <div class="row justify-content-center">
                       <div class="col-8 w-60">
-                          <div class=" blur text-white">
-                              <div class=" text-start">
+                          <div class="blur text-white">
+                              <div class="text-start">
                                   <div class="row">
                                       <div class="col text-center mt-2">
                                           <i class="lni lni-users card-icon"></i>
@@ -62,15 +64,15 @@
                                       </div>
                                   </div>
                                   <div class="row text-center">
-                                      <div class="col ">
+                                      <div class="col">
                                           <p class="card-description">تعداد ثبت نامی ها</p>
                                       </div>
                                   </div>
                               </div>
                           </div>
-                          <div class=" blur text-white mt-4">
-                            <div class=" text-start">
-                                <div class="row ">
+                          <div class="blur text-white mt-4">
+                            <div class="text-start">
+                                <div class="row">
                                     <div class="col text-center mt-3">
                                         <i class="lni lni-notepad card-icon"></i>
                                     </div>
@@ -78,8 +80,8 @@
                                         <p class="card-p">{{finished_exams_count}}</p>
                                     </div>
                                 </div>
-                                <div class="row ">
-                                    <div class="col text-center align-items-center ">
+                                <div class="row">
+                                    <div class="col text-center align-items-center">
                                         <p class="card-description">آزمون های تکمیل شده</p>
                                     </div>
                                 </div>
@@ -89,11 +91,11 @@
                   </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4 gy-5">
-                  <div class="row justify-content-center ">
+                  <div class="row justify-content-center">
                       <div class="col-8 w-5">
-                          <div class=" blur text-white">
-                              <div class=" text-start">
-                                  <div class="row ">
+                          <div class="blur text-white">
+                              <div class="text-start">
+                                  <div class="row">
                                       <div class="col text-center mt-3">
                                           <i class="lni lni-question-circle card-icon"></i>
                                       </div>
@@ -102,22 +104,21 @@
                                       </div>
                                   </div>
                                   <div class="row text-center">
-                                      <div class="col ">
+                                      <div class="col">
                                           <p class="card-description">تعداد کل ازمون ها</p>
                                       </div>
                                   </div>
                               </div>
                           </div>
-
                       </div>
                   </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4 gy-5">
-                  <div class="row justify-content-center ">
+                  <div class="row justify-content-center">
                       <div class="col-8 w-5">
-                          <div class=" blur text-white">
-                              <div class=" text-start">
-                                  <div class="row ">
+                          <div class="blur text-white">
+                              <div class="text-start">
+                                  <div class="row">
                                       <div class="col text-center mt-3">
                                           <i class="lni lni-question-circle card-icon"></i>
                                       </div>
@@ -126,13 +127,12 @@
                                       </div>
                                   </div>
                                   <div class="row text-center">
-                                      <div class="col ">
+                                      <div class="col">
                                           <p class="card-description">تعداد کل سوالات</p>
                                       </div>
                                   </div>
                               </div>
                           </div>
-
                       </div>
                   </div>
               </div>
@@ -173,7 +173,6 @@
                     </div>
                 </div>
                 
-<!-- Akhenbach Modal -->
 <div class="modal fade" id="akhenbachModal" tabindex="-1" aria-labelledby="akhenbachModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -192,11 +191,8 @@
                             </h2>
                             <div id="collapseAkhenbach{{ result.id }}" class="accordion-collapse collapse" aria-labelledby="headingAkhenbach{{ result.id }}" data-bs-parent="#akhenbachAccordion">
                                 <div class="accordion-body">
-                                    <!-- Display Gender and Age -->
                                     <p><strong>جنسیت:</strong> {{ result.gender }}</p>
                                     <p><strong>سن:</strong> {{ result.age }}</p>
-                                    
-                                    <!-- Display the Exam Results (interpretation) -->
                                     <p>{{ result.interpretation | safe }}</p>
                                 </div>
                             </div>
@@ -211,7 +207,6 @@
     </div>
 </div>
 
-<!-- Cattell Modal -->
 <div class="modal fade" id="cattellModal" tabindex="-1" aria-labelledby="cattellModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -230,11 +225,8 @@
                             </h2>
                             <div id="collapseCattell{{ result.id }}" class="accordion-collapse collapse" aria-labelledby="headingCattell{{ result.id }}" data-bs-parent="#cattellAccordion">
                                 <div class="accordion-body">
-                                    <!-- Display Gender and Age -->
                                     <p><strong>جنسیت:</strong> {{ result.gender }}</p>
                                     <p><strong>سن:</strong> {{ result.age }}</p>
-                                    
-                                    <!-- Display the Exam Results (interpretation) -->
                                     <p>{{ result.interpretation | safe }}</p>
                                 </div>
                             </div>
@@ -248,14 +240,164 @@
         </div>
     </div>
 </div>
-
-
-
-                
               </div>
           </div>
         </div>
     </div>
+
+    <script>
+      function showLoadingOverlay() {
+        const overlay = document.getElementById('loading-overlay');
+        overlay.style.opacity = '1'; 
+        overlay.style.visibility = 'visible';
+      }
+    
+      function hideLoadingOverlay() {
+        const overlay = document.getElementById('loading-overlay');
+        overlay.classList.add('fade-out');
+    
+        setTimeout(() => {
+          overlay.style.display = 'none';
+        }, 500);
+      }
+    
+      function setLTRLayout() {
+        document.body.style.direction = 'ltr'; 
+        document.body.style.textAlign = 'left';
+      }
+    
+      async function translatePage(language) {
+        const elements = document.querySelectorAll("h1,title,h2,h3,h4,p,button,a,span,input,textarea");
+        showLoadingOverlay();
+
+        for (let element of elements) {
+          if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+            continue;
+          }
+
+          let childNodes = Array.from(element.childNodes);
+
+          for (let child of childNodes) {
+            if (child.nodeType === Node.TEXT_NODE) {
+              let text = child.textContent.trim();
+
+              if (text) {
+                const cachedTranslation = localStorage.getItem(`${language}-${text}`);
+
+                if (cachedTranslation) {
+                  child.textContent = cachedTranslation;
+                } else {
+                  try {
+                    const response = await fetch("/translate", {
+                      method: "POST",
+                      headers: {
+                        "Content-Type": "application/json",
+                      },
+                      body: JSON.stringify({
+                        text: text,
+                        target_language: language,
+                      }),
+                    });
+
+                    const result = await response.json();
+
+                    if (response.ok) {
+                      child.textContent = result.translated_text;
+                      localStorage.setItem(`${language}-${text}`, result.translated_text);
+                    }
+                  } catch (error) {
+                    console.error("Error translating text:", error);
+                  }
+                }
+              }
+            }
+          }
+
+          if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+            const placeholderText = element.placeholder;
+
+            if (placeholderText) {
+              const cachedPlaceholderTranslation = localStorage.getItem(`${language}-${placeholderText}`);
+
+              if (cachedPlaceholderTranslation) {
+                element.placeholder = cachedPlaceholderTranslation;
+              } else {
+                try {
+                  const response = await fetch("/translate", {
+                    method: "POST",
+                    headers: {
+                      "Content-Type": "application/json",
+                    },
+                    body: JSON.stringify({
+                      text: placeholderText,
+                      target_language: language,
+                    }),
+                  });
+
+                  const result = await response.json();
+
+                  if (response.ok) {
+                    element.placeholder = result.translated_text;
+                    localStorage.setItem(`${language}-${placeholderText}`, result.translated_text);
+                  }
+                } catch (error) {
+                  console.error("Error translating placeholder:", error);
+                }
+              }
+            }
+          }
+        }
+
+        setLTRLayout(); 
+        hideLoadingOverlay();
+      }
+
+      function checkLanguageInSlug() {
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.has('lang')) {
+          const language = urlParams.get('lang');
+          translatePage(language);
+        } else {
+          hideLoadingOverlay();
+        }
+      }
+    
+      window.onload = checkLanguageInSlug;
+    </script>
+
+    <style>
+      #loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        z-index: 9999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 1;
+        transition: opacity 0.5s ease;
+      }
+
+      #loading-spinner {
+        position: absolute;
+      }
+
+      .fade-out {
+        opacity: 0;
+        visibility: hidden;
+      }
+    </style>
+    
+<div id="loading-overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; z-index: 9999;">
+  <div id="loading-spinner" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+</div>
 
     <script>
         function toggleSidebar() {
